# proofbench

./: .env.example  .gitignore  DEV_NOTES.md  README.md  main.py  problem_description.md  pyproject.toml
lean_solver/: .gitignore  LeanSolver.lean  lake-manifest.json  lakefile.toml
results/: eval_20260409_210946.json  eval_20260409_211630.json  eval_20260409_213139.json  eval_20260409_223650.json  eval_20260409_230918.json  eval_20260409_231252.json  eval_20260409_231507.json  eval_20260409_232028.json  eval_20260409_232709.json  eval_20260409_233829.json  eval_20260409_234857.json
src/: config.py  costs.py  generator.py  lean.py  models.py  orchestrator.py  progress.py  prompts.py  scoring.py  solver.py
tests/: test_config.py  test_costs.py  test_generator.py  test_lean.py  test_main.py  test_orchestrator.py  test_prompts.py  test_scoring.py
